# synthahol-phase-plant

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: decibels.rs  envelope.rs  lib.rs  macro_control.rs  metadata.rs  modulation.rs  point.rs  snapin.rs  text.rs  unison.rs  version.rs
src/effect/: bitcrush.rs  carve_eq.rs  channel_mixer.rs  chorus.rs  comb_filter.rs  compressor.rs  convolver.rs  delay.rs  disperser.rs  distortion.rs  dual_delay.rs  dynamics.rs  ensemble.rs  faturator.rs  filter.rs  flanger.rs  formant_filter.rs  frequency_shifter.rs  gain.rs  gate.rs  group.rs  haas.rs  ladder_filter.rs  limiter.rs  mod.rs  multipass.rs  nonlinear_filter.rs  phase_distortion.rs  phaser.rs  pitch_shifter.rs  resonator.rs  reverb.rs  reverser.rs  ring_mod.rs  slice_eq.rs  snap_heap.rs  stereo.rs  tape_stop.rs  three_band_eq.rs  trance_gate.rs  (+1 more)
src/generator/: analog_oscillator.rs  aux_routing.rs  blank.rs  curve_output.rs  distortion_effect.rs  envelope_output.rs  filter_effect.rs  granular_generator.rs  group.rs  mix_routing.rs  mod.rs  noise_generator.rs  nonlinear_filter_generator.rs  sample_player.rs  wavetable_oscillator.rs
src/io/: effects.rs  generators.rs  mod.rs  modulators.rs  read.rs  write.rs
src/modulator/: audio_follower.rs  blank.rs  curve.rs  envelope.rs  group.rs  lfo.rs  lfo_table.rs  limits.rs  midi_cc.rs  mod.rs  mpe_timbre.rs  note.rs  note_gate.rs  pitch_tracker.rs  pitch_wheel.rs  pressure.rs  random.rs  remap.rs  sample_and_hold.rs  scale.rs  slew_limiter.rs  velocity.rs
tests/: README.md
tests/generators/: generators-all-1.8.13.phaseplant
tests/init/: README.md  init-1.7.1.phaseplant  init-1.7.11.phaseplant  init-1.7.3.phaseplant  init-1.7.4.phaseplant  init-1.8.0.phaseplant  init-1.8.12.phaseplant  init-2.0.12.phaseplant  init-2.0.16.phaseplant  init-2.0.9.phaseplant  init-2.1.0.phaseplant  init-2.1.2.phaseplant  init-2.2.0.phaseplant
tests/lanes/: lane-1disabled-1.8.13.phaseplant  lane-1disabled-2.0.12.phaseplant  lane-1poly-2mute-3solo-1.8.13.phaseplant  lane-1poly-2mute-3solo-2.0.12.phaseplant  lane-2haas-1.8.13.phaseplant  lane-3haas-1.8.13.phaseplant  lane-all-master-1.8.13.phaseplant  lane-gains-3-5-10-1.8.13.phaseplant  lane-mix-25%-50%-75%-1.8.13.phaseplant  lane-mix-35%-65%-90%-1.8.13.phaseplant
tests/macros/: macro-1-glidetime64-detune40-bias33-1.8.14.phaseplant  macro-1-to-macro-2-1.8.14.phaseplant  macro-10to80%-1.8.13.phaseplant  macro-3-mastervol25-1.8.14.phaseplant  macro-5-haasdelay50-1.8.14.phaseplant  macro-5-haasdelay50and75-1.8.14.phaseplant  macro1_unipolar-macro2_bipolar-macro3_inverted-2.1.0.phaseplant  macros-1to3-env-mod-1.8.14.phaseplant  macros-5to8-1.8.14.phaseplant
tests/misc/: analog-3ofwithgroup-1.8.13.phaseplant  glide-on-1.8.13.phaseplant  glide-on-42ms-legato-1.8.13.phaseplant  master-gain-+10db-1.8.13.phaseplant  master-gain-+3db-1.8.13.phaseplant  master-gain--20db-1.8.13.phaseplant  master-gain--inf-1.8.13.phaseplant  master-pitch-12semis-50cents-1.8.13.phaseplant  (+2 more)
(+665 files in other folders)
