# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "synthahol-phase-plant"
version = "0.1.0"
edition = "2021"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
description = "Read and write Phase Plant presets"
license = "MIT or Apache-2.0"
homepage = "https://github.com/softdevca/synthahol-phase-plant"
repository = "https://github.com/softdevca/synthahol-phase-plant"
keywords = ["audio", "synth", "patch", "preset", "phaseplant", "kilohearts"]

# Publish to crates.io
publish = true

[dependencies]
base64 = "0.21"
base64-serde = "0.7"
byteorder = "1.4"
downcast-rs = "1.2"
log = "0.4.17"
music-note = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
uom = { version = "0.34.0", default-features = false, features = ["f32", "f64", "si", "std"] }
uuid = { version = "1.3", features = ["v4"], default-features = false }

[dev-dependencies]
approx = "0.5.1"
