# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "synthahol-phase-plant"
version = "0.2.2"
edition = "2021"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
description = "Read and write Phase Plant presets"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/softdevca/synthahol-phase-plant"
repository = "https://github.com/softdevca/synthahol-phase-plant"
keywords = ["audio", "synth", "patch", "preset", "phaseplant"]
publish = true

[dependencies]
base64 = "0.21"
base64-serde = "0.7"
byteorder = "1.5"
downcast-rs = "1.2"
log = "0.4"
music-note = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
uom = { version = "0.35.0", default-features = false, features = ["f32", "f64", "si", "std"] }
uuid = { version = "1.4", features = ["v4"], default-features = false }

[dev-dependencies]
approx = "0.5.1"
